--- a/app/src/main/res/layout/molde_venta_grid.xml
+++ b/app/src/main/res/layout/molde_venta_grid.xml
@@ -20,6 +20,7 @@
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:src="@drawable/toad"
+            android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal"
             />
         <TextView
