--- a/app/src/main/res/layout/activity_venta.xml
+++ b/app/src/main/res/layout/activity_venta.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@color/gris"
     tools:context=".VentaActivity">
 
     <ImageView
@@ -22,6 +23,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Articulo Agotado"
+        android:textColor="#ffffff"
         android:textSize="20pt" />
 
     <TextView
